--- a/AQAChallengeBack/package.json
+++ b/AQAChallengeBack/package.json
@@ -7,7 +7,7 @@
     "test": "jest --runInBand -c ./jest.unit.json",
     "test:coverage": "jest --runInBand --coverage -c ./jest.unit.json",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "tsc && node dist/index.js"
   },
   "keywords": [],
   "author": "",
